--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -7,7 +7,8 @@ a {
 
 h1 {
   text-align: center;
-  text-decoration: Helvetica,sans-serif;
+  text-decoration: Helvetica, sans-serif;
+  font-size: 50px;
 }
 
 #hd {
@@ -24,10 +25,16 @@ h1 {
   font-weight: lighter;
   text-align: center;
   font-style: italic;
+  padding: 10px;
 }
 
 #content {
   color: black;
   font-family: Helvetica;
-  padding: 100px;
+  padding: 40px;
+}
+
+#list {
+  text-align: center;
+  width:100%;
 }
