--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -5,6 +5,13 @@
   font-size: 2.5em;
 }
 
+.img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
 nav a {
   text-decoration: none;
   font-family: 'Raleway';
@@ -37,6 +44,10 @@ summary {
   font-style: italic;
 }
 
+p {
+  width: 100%;
+  padding: 20px;
+}
 section {
   color: black;
   font-family: Helvetica;
@@ -46,7 +57,6 @@ section {
   padding-left: 20px;
   margin-left: 20px;
   padding-right: 20px;
-  border: 1px dotted #A8A8A8;
 }
 
 table {
