--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -21,7 +21,7 @@ nav a {
 }
 
 h3 {
-  text-decoration: sans-serif;
+  font-family: Helvetica;
   color:black;
   font-size: 25px;
 }
@@ -51,13 +51,12 @@ p {
 }
 section {
   color: black;
-  font-family: Helvetica;
+  font-family: serif;
   background: white;
-  width:100%;
-  margin-right: 20px;
-  padding-left: 20px;
-  margin-left: 20px;
-  padding-right: 20px;
+  width:800px;
+  display: block;
+  float: center;
+  margin: 0 auto;
 }
 
 table {
