--- a/style-sheets/index.css
+++ b/style-sheets/index.css
@@ -60,13 +60,24 @@ section table td {
   height: 150px;
 }
 
+th {
+  text-align: center;
+  font-family: Helvetica;
+
+}
+
 .first {
   font-weight: bold;
+  font-size: 16px;
 }
 
 section table td a {
 text-decoration: none;
   color: black;
+}
+
+li {
+  font-size: 12px;
 }
 
 article {
@@ -85,6 +96,14 @@ td a {
   color: black;
 }
 
+#blogs {
+  position: realtive;
+  width: 75%;
+  margin-left: 150px;
+}
 
-
+#blogs a {
+  text-decoration: none;
+  color: #313640;
+}
 
