--- a/style-sheets/index.css
+++ b/style-sheets/index.css
@@ -40,6 +40,7 @@ header {
 }
 
 img {
+  display: block;
   margin: auto;
 }
 
@@ -50,6 +51,7 @@ div {
   font-size: 12px;
   font-style: italic;
   font-family: Helvetica;
+  margin: auto;
 }
 
 section table td {
